retrieveUnpackaged/objects/Employment_History__c.object
<CustomObject>
    <description>This object is used to store the Employment History</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This is the city of the employment.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is this employment history related to?</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This is the country of employment</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>This is related to the county.</description>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a current employment?</description>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>This is the employer.</description>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>This is the end date of the employment.</description>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>This is the job title of the employee.</description>
        <label>Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is this employment history related to a permit?</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_Course__c</fullName>
        <label>Name of Course</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is this employment history related to a permit?</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal &amp; Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Employment History</relationshipLabel>
        <relationshipName>Employment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is the start date of the employment.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This is the state of the employment.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street Address</description>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Job_Title__c</fullName>
        <description>Supervisor Job Title</description>
        <label>Supervisor Job Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <description>Supervisor Name</description>
        <label>Supervisor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone_Number__c</fullName>
        <description>Supervisor Phone Number</description>
        <label>Supervisor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <description>This is the zip code of the address.</description>
        <label>Zip code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EMPH-{000000}</displayFormat>
        <label>Employment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <recordTypes>
        <fullName>Default_Employment_History</fullName>
        <active>true</active>
        <label>Default Employment History</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment_Training_History</fullName>
        <active>true</active>
        <label>Employment Training History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>